web content updates

--- a/NebartiWebsite/about.html
+++ b/NebartiWebsite/about.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kevin Hartig">
 
-    <title>Nebarti - Disruptive Software Technologies</title>
+    <title>Nebarti - Disruptive Software Innovations</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -29,8 +29,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Technologies</a>
+          <!-- Use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
+          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Innovations</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -139,27 +139,46 @@
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-        	<img class="img-responsive img-customer" src="assets/images/nbc_universal_logo.jpeg">
+            <a href="portfolio-1-col-page1.html#nbc_universal">
+        	  <img class="img-responsive img-customer" src="assets/images/nbc_universal_logo.jpeg">
+        	</a>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-        	<img class="img-responsive img-customer" src="assets/images/wayin_logo.jpeg">
+            <a href="portfolio-1-col-page2.html#wayin">
+        	  <img class="img-responsive img-customer" src="assets/images/wayin_logo.jpeg">
+        	</a>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-        	<img class="img-responsive img-customer" src="assets/images/CoSealCol_logo.jpeg">
+            <a href="portfolio-1-col-page1.html#county_of_santa_clara">
+        	  <img class="img-responsive img-customer" src="assets/images/CoSealCol_logo.jpeg">
+        	</a>
+        	
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
+          <a href="portfolio-1-col-page2.html#gorilla_logic">
         	<img class="img-responsive img-customer" src="assets/images/gorillalogic_logo.gif">
+          </a>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-        	<img class="img-responsive img-customer" src="assets/images/totem_logo_small_1.png">
+            <a href="portfolio-1-col-page1.html#totem">
+        	  <img class="img-responsive img-customer" src="assets/images/totem_logo_small_1.png">
+        	</a>
         </div>
 
         <div class="col-md-2 col-sm-4 col-xs-6">
-        	<img class="img-responsive img-customer" src="assets/images/pbr.jpeg">
+            <a href="portfolio-1-col-page3.html#pbr">
+              <img class="img-responsive img-customer" src="assets/images/pbr.jpeg">
+        	</a>
+        </div>
+        
+        <div class="col-md-2 col-sm-4 col-xs-6">
+            <a href="portfolio-1-col-page3.html#idot">
+              <img class="img-responsive img-customer" src="assets/images/idot.jpg">
+        	</a>
         </div>
 
       </div>
@@ -173,7 +192,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2014 Nebarti, LLC. All Rights Reserved</p>
+            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
           </div>
         </div>
       </footer>
