--- a/NebartiWebsite/portfolio-1-col-page1.html
+++ b/NebartiWebsite/portfolio-1-col-page1.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kevin Hartig">
 
-    <title>Nebarti - Disruptive Software Technologies</title>
+    <title>Nebarti - Disruptive Software Innovations</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -29,8 +29,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Technologies</a>
+          <!-- Use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
+          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Innovations</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,11 +62,10 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-1"><img class="img-responsive" src="assets/images/nbc_universal_logo.jpeg"></a>
+          <a name="nbc_universal"><img class="img-responsive" src="assets/images/nbc_universal_logo.jpeg"></a>
         </div>
 
         <div class="col-md-5">
-          <a name="nbc_universal"></a> 
           <h3>NBC Universal</h3>
           <h4>Recommendation Engine</h4>
           <p>
@@ -85,23 +84,23 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-2"><img class="img-responsive" src="assets/images/totem_logo_small_1.png"></a>
+          <a name="totem"><img class="img-responsive" src="assets/images/totem_logo_small_1.png"></a>
         </div>
 
         <div class="col-md-5">
-          <a name="totem"></a> 
-          <h3>Totem</h3>
+          <h3>Atrium and Totem</h3>
           <h4>Web App/Services Development, Data Analytics</h4>
           <p>
-            Successfully turned a failed software development project into a cornerstone 
-            production software system used to service the lifecycle of $40M worth real 
+            Successfully turned a failed software development project into a cornerstone
+            production software system used to service the lifecycle of $70M worth real
             estate tax liens. Currently building a data warehouse for liens, property and 
             tax authority information. Building collection of automated tools to populate 
             the warehouse with data from distributed sources. Leading and participating in 
             the design, development and management of data analytics, web services and 
-            websites to access and manage the data.
+            websites to access and manage the data. Also employed as VP of Technology
+            at Atrium Capital Market Group.
           </p>
-          <a class="btn btn-primary" href="http://datatotem.com/" target="_blank">Website <i class="fa fa-angle-right"></i></a>
+          <a class="btn btn-primary" href="http://atriumcmg.com/" target="_blank">Website <i class="fa fa-angle-right"></i></a>
         </div>
 
       </div>
@@ -111,15 +110,16 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-3"><img class="img-responsive" src="assets/images/CoSealCol_logo.jpeg"></a>
+          <a name="county_of_santa_clara"><img class="img-responsive" src="assets/images/CoSealCol_logo.jpeg"></a>
         </div>
 
         <div class="col-md-5">
           <h3>County of Santa Clara, California</h3>
-          <h4>Business and Systems Analysis</h4>
+          <h4>Business and Systems Analysis, Dev/Ops, Rearchitecting, Database Design, Data Migration</h4>
           <p>
             Business analysis, user experience and testing, project leadership for the 
-            county's Tax Collection and Apportionment Systems.
+            county's Tax Collection and Apportionment Systems. New architecure development for all
+            hardware and software systems. Dev/Ops tools and process definitions and guidance.
           </p>
           <a class="btn btn-primary" href="http://www.sccgov.org/sites/scc/Pages/default.aspx" target="_blank">Website <i class="fa fa-angle-right"></i></a>
         </div>
@@ -135,6 +135,7 @@
             <li><a href="#">&laquo;</a></li>
             <li class="active"><a href="#">1</a></li>
             <li><a href="portfolio-1-col-page2.html">2</a></li>
+            <li><a href="portfolio-1-col-page3.html">3</a></li>
             <li><a href="portfolio-1-col-page2.html">&raquo;</a></li>
           </ul>        
         </div>
@@ -150,7 +151,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2014 Nebarti, LLC. All Rights Reserved</p>
+            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
           </div>
         </div>
       </footer>
