--- a/NebartiWebsite/services.html
+++ b/NebartiWebsite/services.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kevin Hartig">
 
-    <title>Nebarti - Disruptive Software Technologies</title>
+    <title>Nebarti - Disruptive Software Innovations</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Technologies</a>
+          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Innovations</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -150,7 +150,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2014 Nebarti, LLC. All Rights Reserved</p>
+            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
           </div>
         </div>
       </footer>
