--- a/NebartiWebsite/404.html
+++ b/NebartiWebsite/404.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Full Width Page - Modern Business - Start Bootstrap Template</title>
+    <title>Nebarti - Disruptive Software Innovations - Oops</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
+          <!-- Use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
           <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Technologies</a>
         </div>
 
@@ -83,7 +83,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2014 Nebarti, LLC. All Rights Reserved</p>
+            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
           </div>
         </div>
       </footer>
