--- a/NebartiWebsite/portfolio-1-col-page2.html
+++ b/NebartiWebsite/portfolio-1-col-page2.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Kevin Hartig">
 
-    <title>Nebarti - Disruptive Software Technologies</title>
+    <title>Nebarti - Disruptive Software Innovations</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
           </button>
           <!-- You'll want to use a responsive image option so this logo looks good on devices - I recommend using something like retina.js (do a quick Google search for it and you'll find it) -->
-          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Technologies</a>
+          <a class="navbar-brand" href="index.html">Nebarti - Disruptive Software Innovations</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -62,7 +62,7 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-2"><img class="img-responsive" src="assets/images/wayin_logo.jpeg"></a>
+          <a name="wayin"><img class="img-responsive" src="assets/images/wayin_logo.jpeg"></a>
         </div>
 
         <div class="col-md-5">
@@ -81,7 +81,7 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-4"><img class="img-responsive" src="assets/images/serge_media_logo.jpeg"></a>
+          <a name="serge_media"><img class="img-responsive" src="assets/images/serge_media_logo.jpeg"></a>
         </div>
 
         <div class="col-md-5">
@@ -101,7 +101,7 @@
       <div class="row">
 
         <div class="col-md-7">
-          <a name="portfolio-item-5"><img class="img-responsive" src="assets/images/gorillalogic_logo.gif"></a>
+          <a name="gorilla_logic"><img class="img-responsive" src="assets/images/gorillalogic_logo.gif"></a>
         </div>
 
         <div class="col-md-5">
@@ -122,7 +122,8 @@
             <li><a href="portfolio-1-col-page1.html">&laquo;</a></li>
             <li><a href="portfolio-1-col-page1.html">1</a></li>
             <li class="active"><a href="#">2</a></li>
-            <li><a href="#">&raquo;</a></li>
+            <li><a href="portfolio-1-col-page3.html">3</a></li>
+            <li><a href="portfolio-1-col-page3.html">&raquo;</a></li>
           </ul>        
         </div>
 
@@ -137,7 +138,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2014 Nebarti, LLC. All Rights Reserved</p>
+            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
           </div>
         </div>
       </footer>
