added favicon references

--- a/NebartiWebsite/404.html
+++ b/NebartiWebsite/404.html
@@ -14,6 +14,7 @@
     <!-- Add custom CSS here -->
     <link href="assets/css/modern-business.css" rel="stylesheet">
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/images/favicon.ico">
   </head>
 
   <body>
