updated copyright script and date

--- a/NebartiWebsite/portfolio-1-col-page1.html
+++ b/NebartiWebsite/portfolio-1-col-page1.html
@@ -152,7 +152,11 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
+            Copyright &copy; 2009 -
+            <span id="copyright">
+              <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+            </span>
+            Nebarti, LLC. All Rights Reserved
           </div>
         </div>
       </footer>
