--- a/NebartiWebsite/index.html
+++ b/NebartiWebsite/index.html
@@ -158,8 +158,12 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; 2010-2015 Nebarti, LLC. All Rights Reserved</p>
-          </div>
+            Copyright &copy; 2009 -
+            <span id="copyright">
+              <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+            </span>
+            Nebarti, LLC. All Rights Reserved
+          </div>  
         </div>
       </footer>
 
